config/samples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ingress-operator
    ingress.nginx.k8s.io/lb-config: |
      {
        "backends": [
          {"host": "admin.k8s.com", "name": "nginx-service-g", port: 9094, "config": "max_fails=3 fail_timeout=30s weight=80"},
          {"host": "admin.k8s.com", "name": "nginx-service-h", port: 9098, "config": "max_fails=3 fail_timeout=30s weight=20"}
        ]
      }
    ingress.nginx.k8s.io/enable-stream: "true"
    ingress.nginx.k8s.io/ssl-redirect: "true"
    ingress.nginx.k8s.io/set-stream-config: |
      {
        "backends": [
          {"name": "mysql", "name_space": "web", "port": 3306},
          {"name": "mysql-2", "name_space": "web", "port": 33062},
          {"name": "mysql-3", "name_space": "game", "port": 33063}
        ]
      }
    ingress.nginx.k8s.io/enable-limit-req: "true"
    ingress.nginx.k8s.io/set-limit-req-config: |
      {
      	"backends": [
      		{
      			"limit_zone": [
      				{
      					"limit_key": "$binary_remote_addr$request_uri",
      					"zone_name": "per_ip_uri",
                        "capacity": "10m",
      					"rate": "5r/s"
      				}
      			],
      			"limit_req": [
      				{
      					"zone_name": "per_ip_uri",
      					"burst": 5,
                        "delay": true
      				}
      			],
      			"name": "nginx-service-h"
      		},
            {
      			"limit_zone": [
      				{
      					"limit_key": "$binary_remote_addr$server_name",
      					"zone_name": "per_ip_sn",
                        "capacity": "10m",
      					"rate": "10r/s"
      				}
      			],
      			"limit_req": [
      				{
      					"zone_name": "per_ip_sn",
      					"burst": 10,
                        "delay": true
      				}
      			],
      			"name": "nginx-service-a"
      		}
      	]
      }
    ingress.nginx.k8s.io/enable-limit-conn: "true"
    ingress.nginx.k8s.io/set-limit-conn-config: |
        {
        	"backends": [
        		{
        			"limit_zone": [
        				{
        					"limit_key": "$binary_remote_addr",
        					"zone_name": "perip",
                            "capacity": "10m"
        				}
        			],
        			"limit_conn": [
        				{
        					"zone_name": "perip",
        					"burst": 10
        				}
        			],
        			"name": "nginx-service-h"
        		}
        	]
        }
    ingress.nginx.k8s.io/rewrite-target: "$2"
    ingress.nginx.k8s.io/rewrite-flag: "break"
    ingress.nginx.k8s.io/enable-regex: "true"
    ingress.nginx.k8s.io/enable-ip-whitelist: "true"
    ingress.nginx.k8s.io/set-ip-white-config: |
      {
        "backends": [
          {
            "ip": ["2.2.2.2", "2.2.2.3", "2.2.2.7", "192.168.3.196"],
            "backend": "nginx-service-a"
          }
        ]
      }
    ingress.nginx.k8s.io/enable-ip-blacklist: "true"
    ingress.nginx.k8s.io/set-ip-black-config: |
      {
        "backends": [
          {
            "ip": ["2.2.2.2", "2.2.2.3", "2.2.2.7", "192.168.3.196"],
            "backend": "nginx-service-a"
          }
        ]
      }
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/created-by: ingress-nginx-operator
  name: api
  namespace: web
spec:
  defaultBackend:
    service:
      name: nginx-service-k
      port:
        number: 9099
  rules:
    - host: "api.web99.com"
      http:
        paths:
          - path: "/a2/(p1|p2)(/.*)$"
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service-g
                port:
                  number: 9094
